# gherkin-lint

./: README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
src/gherkin_lint/: gherkin_lint.py
src/gherkin_lint/gherkin_checks/: __init__.py  base.py  check_and_keyword.py  check_background_occurrence.py  check_comments.py  check_empty_step.py  check_feature_keyword.py  check_free_description.py  check_given_ending.py  check_indentation.py  check_keyword_description.py  check_scenario_outline_example.py  check_step_block_separation.py  check_step_keyword_repetition.py  check_step_separation.py  check_tag_indentation.py  check_when_then_sequence.py  check_whitespace.py
tests/: conftest.py  test_doc_and.py  test_doc_background.py  test_doc_comments.py  test_doc_descriptions.py  test_doc_empty_steps.py  test_doc_feature_ok.py  test_doc_feature_one_only.py  test_doc_given_check.py  test_doc_indent_3.py  test_doc_indent_4.py  test_doc_indent_rule_and_scenarios.py  test_doc_indent_scenarios.py  test_doc_keyword_titles.py  test_doc_scenario_blocks.py  test_doc_scenario_outline_example.py  test_doc_step_keyword_repetitions.py  test_doc_when_then_sequence.py  test_doc_whitespace.py
tests/doc_test/doc_and_used/: and.feature
tests/doc_test/doc_background/: feature_background.feature  rule_background.feature
tests/doc_test/doc_comments/: comment.feature
tests/doc_test/doc_descriptions/: doc_descriptions.feature  doc_descriptions_rules.feature
tests/doc_test/doc_empty_steps/: given_empty.feature  repetition_empty.feature  repetition_when_empty.feature
tests/doc_test/doc_features_ok/: ok.feature  outline.feature
tests/doc_test/doc_features_one_only/: second.feature
tests/doc_test/doc_given_check/: given.feature
tests/doc_test/doc_indent_3/: indent_3.feature
tests/doc_test/doc_indent_4/: indent_4.feature
tests/doc_test/doc_whitespace/: eof.feature  (+3 more)
(+12 files in other folders)
