[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "gherkin-lint"
version = "1.0.0"
description = "Lint Gherkin feature files"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jörg Kreuzberger", email = "j.kreuzberger@procitec.de" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Repository = "https://github.com/procitec/gherkin-lint"
Issues = "https://github.com/procitec/gherkin-lint/issues"

[project.scripts]
gherkin-lint = "gherkin_lint.gherkin_lint:main"

[dependency-groups]
test = [
    "pytest>=8",
]
lint = [
    "ruff>=0.8",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 160
target-version = "py312"
src = ["src", "tests"]

[tool.tox]
requires = ["tox>=4.24.1", "tox-uv>=1.35"]
env_list = ["py312", "py313", "lint"]

[tool.tox.env_run_base]
description = "Run tests with {base_python}"
dependency_groups = ["test"]
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]

[tool.tox.env.lint]
description = "Run lint checks"
package = "skip"
dependency_groups = ["lint"]
commands = [
    ["ruff", "check", "."],
    ["ruff", "format", "--check", "."],
]
